fix align

--- a/tareaya/src/components/footer/footer.css
+++ b/tareaya/src/components/footer/footer.css
@@ -2,50 +2,58 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-  }
+    margin: 0;
+}
 
 .footer {
     background-color: #1A3750;
     color: #FFFDEC;
     width: 100%;
-    position: absolute;
+    position: fixed;
     bottom: 0;
+    left: 0;
     display: flex;
     justify-content: space-between;
-    padding: 20px;
-  }
-  
-  .column {
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+.column {
     display: flex;
     flex-direction: column;
     text-align: left;
-  }
-  
-  .title {
+    margin-left: 5%;
+}
+
+.title {
     color: #2D9596;
-  }
-  
-  .list {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.list {
     color: #9AD0C2;
     list-style-type: none;
-  }
-  
-  .socials {
+    margin-top: 0;
+    padding-left: 0;
+}
+
+.socials {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-  }
-  
-  .socials-text {
+}
+
+.socials-text {
     color: #FFFDEC;
-  }
-  
-  .icons img {
+}
+
+.icons img {
     margin-right: 10px;
-  }
-  
-  .copyright {
+}
+
+.copyright {
     color: #FFFDEC;
-    text-align: center;
-  }
-  
+    margin-top: auto;
+    margin-right: 1%;
+}
